--- a/3.html
+++ b/3.html
@@ -30,7 +30,44 @@ console.log(3 - 4 * 2);
 <script>
   "use strict";
 
-  // Здесь пишем решение, данный комментарий необходимо стереть.
+  /*
+1. число 10 прибавляем число 10 получаем число 20
+2. число 20 прибавляем к строке 10 получаем строку 2010
+3. С помощью console.log выводим строку 2010
+*/
+console.log(10 + 10 + "10");
+
+
+/*
+1. число 10 прибавляем строку 10 получаем строку 1010
+2. строку 1010 прибавляем к числу 10 получаем 101010
+3. С помощью console.log выводим строку 101010
+*/
+console.log(10 + "10" + 10);
+
+
+/*
+1. число 10 прибавляем к числу 10 получаем число 20
+2. так как перед строкой 10 стоит знак + это озночает что строка превращается в числою. Значит число 20 прибавляем к числу 10 получаем число 30 
+3. С помощью console.log выводим число 30
+*/
+console.log(10 + 10 + +"10");
+
+
+/*
+1. так как перед пустой строкой стоит знак минус, то он превращает пустую строку в число -0
+2. если число 10 поделить на -0 будет - бесконечность
+3. С помощью console.log выводим -infinity
+*/
+console.log(10 / -"");
+
+
+/*
+1. так как перед строкой стоит знак +, то он превращает содержимое строки в число, но поскольку разделитель запятая, то будет NaN
+2. если число 10 поделить на NaN получим NaN
+3. С помощью console.log выводим NaN
+*/
+console.log(10 / +"2,5");
 </script>
 </body>
 </html>
