--- a/домашнее_задание_2_урок/3.html
+++ b/домашнее_задание_2_урок/3.html
@@ -26,11 +26,11 @@
     const a = +prompt('Введите первое число'),
       b = +prompt('Введите второе число');
     if (a > b) {
-      console.log(a - b)
+      console.log(a - b);
     } else if (a < 0 && b < 0) {
-      console.log(a * b)
+      console.log(a * b);
     } else if ((a < 0 && b > 0) || (a > 0 && b < 0)) {
-      console.log(a + b)
+      console.log(a + b);
     }
   </script>
 </body>
