--- a/домашнее_задание_2_урок/6.html
+++ b/домашнее_задание_2_урок/6.html
@@ -28,15 +28,17 @@ console.log(declinationOfNumber(5, "стул", "стула", "стульев"));
     "use strict";
 
     function declinationOfNumber(num, arg1, arg2, arg3, ) {
-      if (num % 10 === 1) {
+      if (num % 100 >= 11 && num % 100 < 15) {
+        return (arg3);
+      } else if (num % 10 === 1) {
         return (arg1);
-      } else if (num % 100 > 11 && num % 100 < 15) {
+      } else if (num % 100 >= 11 && num % 100 < 15) {
         return (arg3);
       } else if (num % 10 > 1 && num % 10 < 5) {
         return (arg2);
       } else {
-      return (arg3);
-    }
+        return (arg3);
+      }
     }
   </script>
 </body>
