--- a/домашнее_задание_3_урок/домашнее_задание/3.html
+++ b/домашнее_задание_3_урок/домашнее_задание/3.html
@@ -30,14 +30,13 @@
       },
     ];
 
-    products.forEach(function (product) {
-      product.price *= 0.85
-    });
-    console.log(products);
-
-    // либо стрелочная 
-    //products.forEach(product => product.price *= 0.85);
+    // products.forEach(function (product) {
+    //   product.price *= 0.85
+    // });
     // console.log(products);
+
+  products.forEach(product => product.price *= 0.85);
+  console.log(products);
   </script>
 </body>
 
