--- a/домашнее_задание_3_урок/домашнее_задание/6.html
+++ b/домашнее_задание_3_урок/домашнее_задание/6.html
@@ -26,7 +26,7 @@ xxxxx
   "use strict";
 
 
-  for (let i = 'x'; i.length <+ 20; i += 'x') {
+  for (let i = 'x'; i.length <= 20; i += 'x') {
     console.log(i);
   }
  
