--- a/домашнее_задание_6_урок/задания 2 уровня/1-получение_значений_из_input/inputs.html
+++ b/домашнее_задание_6_урок/задания 2 уровня/1-получение_значений_из_input/inputs.html
@@ -24,7 +24,7 @@
         "use strict"
 
         const span = document.querySelector('span');
-        const fromEl = document.getElementById('from').addEventListener('change', event => {
+        document.getElementById('from').addEventListener('change', event => {
             span.textContent = event.target.value;
         });
     </script>
